IY Report: modify makefile

--- a/aber/IY_report/Makefile
+++ b/aber/IY_report/Makefile
@@ -4,6 +4,6 @@ DOCTEMPLATE = ~/git/documents/templates/template.tex
 BIBFILE = refs.bib
 BIBSTYLE = ~/git/documents/templates/ieee-with-url.csl
 
-doc: iy-report.md
+doc:
 	pandoc -f markdown+tex_math_single_backslash --biblio $(BIBFILE) --csl $(BIBSTYLE) --template $(DOCTEMPLATE) $(DOCNAME) -o $(OUTPUTFILE)
 	/usr/texbin/pdflatex $(OUTPUTFILE)
